[metadata]
name = RaspyGeo
version = 0.0.1
author = Daniel Philippus
author_email = daniel@dphilippus.com
description = Automated geometry scenario runner (loosely analogous to the Geometry Editor tool) for HEC-RAS
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/quantum-dan/RaspyGeo
project_urls = 
	Bug Tracker = https://github.com/quantum-dan/Geo/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Operating System :: Microsoft :: Windows

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6
install_requires = 
	raspy-auto >= 1.0.3

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0

